# open-corp

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  FACEBOOK_POST.md  README.md  ROADMAP.md  TEST_PLAN.md  charter.yaml  lessons.md  mkdocs.yml  pyproject.toml  requirements.txt  todo.md
docs/: architecture.md  contributing.md  index.md  migration.md  quickstart.md  troubleshooting.md
docs/api/: index.md
docs/user-guide/: cli.md  configuration.md  plugins.md  scheduling.md  templates.md  trading.md  webhooks.md  workflows.md
framework/: __init__.py  accountant.py  broker.py  config.py  dashboard.py  db.py  events.py  exceptions.py  housekeeping.py  hr.py  knowledge.py  log.py  marketplace.py  plugins.py  registry.py  router.py  scheduler.py  task_router.py  validation.py  webhooks.py  worker.py  workflow.py
framework/static/: style.css
framework/templates/dashboard/: base.html  budget.html  error.html  events.html  home.html  schedule.html  worker_detail.html  workers.html  workflows.html
scripts/: corp.py  telegram_bot.py
tasks/: lessons.md  todo.md
templates/content-repurposer/: profile.md  skills.yaml
templates/content-writer/: config.yaml  profile.md  skills.yaml
templates/data-analyst/: profile.md  skills.yaml
templates/job-hunter/: profile.md  skills.yaml
templates/researcher/: profile.md  skills.yaml
templates/trader/: config.yaml  profile.md  skills.yaml
tests/: conftest.py  test_accountant.py  test_broker.py  test_cli.py  test_config.py  test_dashboard.py  test_db.py  test_events.py  test_exceptions.py  test_housekeeping.py  test_hr.py  test_integration.py  test_knowledge.py  test_logging.py  test_marketplace.py  test_plugins.py  test_registry.py  test_router.py  test_scheduler.py  test_task_router.py  test_telegram_bot.py  test_templates.py  test_validation.py  test_webhooks.py  test_worker.py  test_workflow.py
workflows/: example_trading.yaml
